--- a/promote_section/index.html
+++ b/promote_section/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./assets/styles/font.css" />
-    <title>Header</title>
+    <title>promote_section</title>
   </head>
   <body>
     <section class="promote_section">
